# LFRic-Atmosphere-Training

./: .gitignore  .pa11yci.js  AGENTS.md  CONTRIBUTORS.md  README.md  environment.yml  package-lock.json  package.json  pixi.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: accessibility.yml  build_docs_pixi.yml  build_test.yml  cla-check.yaml  deploy_pages.yml  test.yml  test_notebooks_pixi.yml  tests.yml  tests_notebooks.yml
notebooks/: README.md
notebooks/iris-mesh-tutorial/: .gitignore  README.md  pixi.toml  run_notebooks.py
notebooks/iris-mesh-tutorial/notebooks/: 00_Mesh_Tutorial_Intro.ipynb  01_Load_and_Examine.ipynb  02_Meshes.ipynb  03_Plotting.ipynb  04_Regridding.ipynb  05_RegionExtraction.ipynb  06_Exercise_01.ipynb  07_Exercise_02.ipynb  80_Bonus_01_mesh_from_numbers.ipynb  82_Bonus_03_MeshCube_Extraction.ipynb  README.md
notebooks/test/: execute_notebooks.sh
source/: accessibility.rst  conf.py  glossary.rst  hyperlinks.rst.include  index.rst
source/_extensions/: README.md  quizdown.py
source/_static/: accessibility.css  accessibility.js  admonitions.css  nav-collapse.css  nav-collapse.js
source/_templates/: globaltoc.html  show-accessibility.html
source/appendices/: index.rst  jupyter_notebooks.rst  monsoon3.rst
source/gc_science_configs/: gc_intro_quiz.quizdown  gc_introduction.rst  index.rst  model_evaluation.rst  practical_exercises.rst  tools.rst
source/gc_science_configs/introduction/: index.rst
source/gc_science_configs/med/: index.rst  model_development.rst  model_evaluation.rst
source/gc_science_configs/practical_exercises/: index.rst  practical_exercises.rst
source/gc_science_configs/tools/: index.rst  tools.rst
source/global/: index.rst
source/include/: cylc-gui.rst  iris.rst  lfric-modules.rst  monsoon3-help.rst  opengl-software-rendering.rst  other-platform-hpc.rst  other-platform.rst  rose-edit-no-monsoon-help.rst  rose-edit.rst  x11-forwarding.rst
source/intro/: index.rst
source/introduction/: components.rst  history_context.rst  index.rst  land_surface_and_jules.rst  ocean_and_sea_ice.rst  quiz.rst  seamless_modelling.rst
source/intruduction/: components.rst  history_context.rst  index.rst
source/lfric_code/: index.rst
source/lfric_infrastructure/: code_repositories.rst  index.rst  output_control.rst  practical_command_line.rst  practical_exercises.rst  practical_standard_suite.rst  practical_standart_suite.rst  practical_stem_test.rst  psykal_infrastructure.rst  science_apps.rst  working_practices.rst
source/mesh/: index.rst
source/mesh_overview/: index.rst  practical_exercises.rst  structured_overview.rst  unstructured_introduction.rst
source/modelling/: index.rst
source/ral_science_configs/: index.rst
source/regional/: index.rst
(+95 files in other folders)
