[tool.setuptools]
py-modules = []

[project]
name = "lfric-atmosphere-training"
version = "0.1.0"
description = "Training materials for Momentum LFRic Atmosphere."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "sphinx>=7,<10",
  "pydata-sphinx-theme!=0.17.0",
  "sphinx-toolbox<5",
  "sphinxcontrib-video",
  "sphinxcontrib-quizdown @ git+https://github.com/bonartm/sphinxcontrib-quizdown.git",
  "sphinx-lint",
]

[project.optional-dependencies]
notebooks = [
  "jupyterlab",
  "scitools-iris",
  "geovista==0.5.3",
  "pyvista>=0.46.3,<0.49",
  "vtk<9.7",
  "ipyvtklink",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "jupyter-server-proxy",
  "matplotlib",
  "jupytext==1.19.2",
  "esmf-regrid",
  "numpy<3",
]

mesh_tutorials = [
  "jupyterlab",
  "scitools-iris",
  "geovista==0.5.3",
  "pyvista>=0.46.3,<0.49",
  "vtk<9.7",
  "ipyvtklink",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "jupyter-server-proxy",
  "matplotlib",
  "jupytext==1.19.2",
  "esmf-regrid",
  "numpy<3",
]

dev = [
  "pre-commit",
]

[tool.uv]
package = false
