[tool.setuptools]
py-modules = []

[project]
name = "lfric-atmosphere-training"
version = "0.1.0"
description = "Training materials for Momentum LFRic Atmosphere."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sphinx>=7,<9",
  "pydata-sphinx-theme!=0.17.0",
  "sphinx-toolbox<4",
  "sphinxcontrib-video",
  "sphinxcontrib-quizdown @ git+https://github.com/bonartm/sphinxcontrib-quizdown.git",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-lint",
]

[project.optional-dependencies]
notebooks = [
  "jupyterlab",
  "scitools-iris",
  "geovista==0.5.3",
  "pyvista>=0.46.3,<0.47",
  "vtk<9.6",
  "ipyvtklink",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "jupyter-server-proxy",
  "matplotlib",
  "jupytext==1.14.4",
  "esmf-regrid",
  "numpy<2",
]

dev = [
  "jupyter",
]

[tool.uv]
package = false
