[tool.setuptools]
py-modules = []

[tool.doc8]
ignore = ['D000']

[project]
name = "lfric-atmosphere-training"
version = "0.1.0"
description = "Training materials for Momentum LFRic Atmosphere."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sphinx>=8.2",
  "pydata-sphinx-theme!=0.17.0",
  "sphinxcontrib-video",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-lint",
]

[project.optional-dependencies]
notebooks = [
  "jupyterlab",
  "scitools-iris",
  "geovista==0.5.3",
  "pyvista>=0.46.3,<0.49",
  "vtk<9.7",
  "ipyvtklink",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "jupyter-server-proxy",
  "matplotlib",
  "jupytext==1.19.3",
  "esmf-regrid",
  "numpy<3",
]

dev = [
  "doc8",
  "jupyter",
]

[tool.uv]
package = false
